# Qwen3-ASR-FastAPI

./: .env.example  Dockerfile.fastapi  FASTAPI_README.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  app.py  benchmark_runner.py  docker-compose.fastapi.yml  environment.yml  launch_fastapi_server.sh  measure_rtf.py  pyproject.toml  subtitle_utils.py
docker/: Dockerfile-qwen3-asr-cu128
docs/: ARCHITECTURE.md  BENCHMARK.md  WALKTHROUGH.md
examples/: test_fastapi_client.py  test_fastapi_server.py
qwen_asr/cli/: serve_fastapi.py
results/: results_fp16.json  results_fp16_0.6b.json  results_util_0.3_lowlen.json
